Adding some more requirements

--- a/zuper/static/js/orders/select.user.html
+++ b/zuper/static/js/orders/select.user.html
@@ -7,7 +7,7 @@
     </md-toolbar>
     <md-dialog-content>
       <div class="agents-list-agent" ng-repeat="agent in agents" ng-click="answer(agent)">
-        [[agent.name]]
+        [[agent.name]]-[[agent.phone]]
       </div>
     </md-dialog-content>
   </form>
